MM-21057 Fix for New message line cutoff at the top of channel (#4492)
* MM-21057 Fix for New message line cutoff at the top of channel

  * With some of the recent changes to show image preview on hover
   we changed the max dimentions of the markdown images causing a
   difference in placeholder image size and rencered image size.
   This causes a minor scroll pop cauing the new messga line to move above

* fix snapshots

--- a/sass/layout/_markdown.scss
+++ b/sass/layout/_markdown.scss
@@ -63,7 +63,7 @@ h6 {
         min-width: 50px;
         display: inline-block;
         width: 100%;
-        vertical-align: middle;
+        vertical-align: top;
     }
 
     .post {
@@ -76,9 +76,7 @@ h6 {
     }
 
     .markdown-inline-img--hover {
-        max-width: calc(100% - 5px);
         border: 1px solid transparent;
-
         &:hover {
             @include border-radius(4px);
             @include single-transition(all, .1s, linear);
